--- a/index.html
+++ b/index.html
@@ -48,5 +48,30 @@
             <b>desligar a humanidade:</b>Podem desativar suas emoções para facilitar a alimentação e matar, tornando-se mais racionais e frios.
             <b>alimentação:</b> Necessitam do sangue de humanos para sobreviver, mas podem se alimentar de animais.
             <b>tranformação:</b> Podem transformar humanos em vampiros através da ingestão de seu sangue. </div>
+
+            <table border ="1">
+                <tr>
+                    <th>Nome</th>
+                    <th>Idade</th>
+                    <th>Habilidades</th>
+                </tr>
+                <tr>
+                    <td>Stefan Salvatore</td>
+                    <td>170 anos</td>
+                    <td>Força, velocidade, cura acelerada</td>
+                </tr>
+                <tr>
+                    <td>Damon Salvatore</td>
+                    <td>175 anos</td>
+                    <td>Manipulação mental, força, velocidade</td>
+                </tr>
+                <tr>
+                    <td>Elena Gilbert</td>
+                    <td>18 anos (humana)</td>
+                    <td>Nenhuma habilidade sobrenatural (até se tornar vampira)</td>
+                </tr>
+    
+            
+
 </body>
 </html>
